Fixed an UAF in DNS cache
Fix for https://github.com/envoyproxy/envoy/security/advisories/GHSA-g9vw-6pvx-7gmw

Signed-off-by: Yan Avlasov <yavlasov@google.com>
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -110,6 +110,10 @@ bug_fixes:
   change: |
     Fixed an issue where cookies prefixed with ``__Secure-`` or ``__Host-`` were not receiving a
     Secure attribute (`CVE-2025-55162 <https://github.com/envoyproxy/envoy/security/advisories/GHSA-95j4-hw7f-v2rh>`_).
+- area: dns
+  change: |
+    Fixed an UAF in DNS cache that can occur when the Host header is modified between the Dynamic Forwarding and Router
+    filters (`CVE-2025-54588 <https://github.com/envoyproxy/envoy/security/advisories/GHSA-g9vw-6pvx-7gmw>`_).
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
