maxmind geoip provider: add gauge to track database creation timestamp (#40809)
This change adds a gauge metric to track the build epoch of a Maxmind
database file, see https://maxmind.github.io/MaxMind-DB/#build_epoch.
This value is part of the MMDB file formats metadata field and according
to docs should always be present
https://maxmind.github.io/libmaxminddb.

The main usage of this metric would be to track the freshness of the
database files that the Envoy process has loaded into memory.

<!--
!!!ATTENTION!!!

If you are fixing *any* crash or *any* potential security issue, *do
not*
open a pull request in this repo. Please report the issue via emailing
envoy-security@googlegroups.com where the issue will be triaged
appropriately.
Thank you in advance for helping to keep Envoy secure.

!!!ATTENTION!!!

For an explanation of how to fill out the fields, please see the
relevant section
in
[PULL_REQUESTS.md](https://github.com/envoyproxy/envoy/blob/main/PULL_REQUESTS.md)
-->

Commit Message: maxmind geoip provider: add gauge to track database
creation timestamp
Additional Description: Adds a new gauge metric to track maxmind
database freshness
Risk Level: low
Testing: unit and integration tests
Docs Changes: added
Release Notes: added
Platform Specific Features: n/a

Signed-off-by: Alex Sundström <asundstrom@spotify.com>
Signed-off-by: Alex Sundström <alexnssm@gmail.com>
Co-authored-by: Alex Sundström <asundstrom@spotify.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -321,5 +321,10 @@ new_features:
     :ref:`stream_flush_timeout
     <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.stream_flush_timeout>`
     to allow for configuring a stream flush timeout independently from the stream idle timeout.
+- area: geoip
+  change: |
+    Added a new metric ``db_build_epoch`` to track the build timestamp of the Maxmind geolocation database files.
+    This can be used to monitor the freshness of the databases currently in use by the filter.
+    See https://maxmind.github.io/MaxMind-DB/#build_epoch for more details.
 
 deprecated:
