--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -16,6 +16,12 @@ bug_fixes:
   change: |
     Fixed an UAF in DNS cache that can occur when the Host header is modified between the Dynamic Forwarding and Router
     filters.
+- area: stats
+  change: |
+    Fixed a bug where the metric name ``expiration_unix_time_seconds`` of
+    ``cluster.<cluster_name>.ssl.certificate.<cert_name>.<metric_name>``
+    and ``listener.<address>.ssl.certificate.<cert_name>.<metric_name>``
+    was not being properly extracted in the final prometheus stat name.
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
