--- a/tools/dependency/cve.yaml
+++ b/tools/dependency/cve.yaml
@@ -52,3 +52,11 @@ ignored_cves:
 # This CVE assumes an untrusted client that can affect a shared connection between an intervening proxy and
 # gRPC server, and does not affect Envoy directly
 - CVE-2023-32732
+
+# LuaJIT doesnt have proper versioning (everything appears to be 2.1 forever) but they do provide a commit date
+# for when CVEs were resolved (in CVE descriptions)
+# 20240314
+- CVE-2024-25177
+- CVE-2024-25178
+# 20240626
+- CVE-2024-25176
