--- a/.bazelrc
+++ b/.bazelrc
@@ -95,6 +95,7 @@ build:gcc --linkopt=-fuse-ld=gold --host_linkopt=-fuse-ld=gold
 build:gcc --test_env=HEAPCHECK=
 build:gcc --action_env=BAZEL_COMPILER=gcc
 build:gcc --action_env=CC=gcc --action_env=CXX=g++
+build:gcc --copt=-Wno-error=attributes
 
 # Clang-tidy
 # TODO(phlax): enable this, its throwing some errors as well as finding more issues
