Change `ClientSideWeightedRoundRobinLoadBalancer::WorkerLocalLbFactory::applyWeightsToAllWorkers()` to iterate over priorities on the thread local worker's priority set. (#40479)
- If the passed `priority` is >= the number of priorities in
`EdfLoadBalancerBase::priority_set_`, the code tries to access an
element out of bounds in `EdfLoadBalancerBase::refresh(uint32_t
priority)`.
- The issue is that thread aware load balancer and thread local worker
load balancers reference different instances of `PrioritySet` which are
updated asynchronously after receiving EDS updates, so thread aware load
balancer's priority set might have more priorities than the worker's.
- Added `ClientSideWeightedRoundRobinEdsIntegrationTest` reproduces the
issue and verifies the fix.

<!--
!!!ATTENTION!!!

If you are fixing *any* crash or *any* potential security issue, *do
not*
open a pull request in this repo. Please report the issue via emailing
envoy-security@googlegroups.com where the issue will be triaged
appropriately.
Thank you in advance for helping to keep Envoy secure.

!!!ATTENTION!!!

For an explanation of how to fill out the fields, please see the
relevant section
in
[PULL_REQUESTS.md](https://github.com/envoyproxy/envoy/blob/main/PULL_REQUESTS.md)
-->

Risk Level: Low
Testing: ClientSideWeightedRoundRobinEdsIntegrationTest
Docs Changes: n/a

#34777

---------

Signed-off-by: Misha Efimov <mef@google.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -142,6 +142,10 @@ bug_fixes:
     Fixed a bug where the access log was skipped for HTTP/3 requests when the stream was half closed. This behavior can be
     reverted by setting the runtime guard
     ``envoy.reloadable_features.quic_fix_defer_logging_miss_for_half_closed_stream`` to ``false``.
+- area: load_balancing
+  change: |
+    Fixed a bug in ClientSideWeightedRoundRobinLoadBalancer with worker lbs iterating over priorities
+    included in owning thread aware lb priority set that might have different number of priorities.
 - area: http
   change: |
     Fixed a bug where premature resets of streams could result in recursive draining and a potential
