--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -150,6 +150,9 @@ new_features:
 - area: admin
   change: |
     Added ``/memory/tcmalloc`` admin endpoint that provides TCMalloc memory statistics.
+- area: dns_filter
+  change: |
+    Added :ref:`access_log <envoy_v3_api_field_extensions.filters.udp.dns_filter.v3.DnsFilterConfig.access_log>` for DNS filter.
 - area: quic
   change: |
     Added QUIC protocol option :ref:`max_sessions_per_event_loop
